# rice_yield_prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
data/raw/: actual_evapotranspiration.csv  area_production_yield.csv  irrigated_area.csv  maximum_temperature.csv  minimum_temperature.csv  potential_evapotranspiration.csv  precipitation.csv  rainfall.csv  water_deficit.csv
notebooks/: data_exploration.qmd  eda.qmd  model_optimization.qmd  optimize.qmd  shap.qmd
src/rice_yield/: cli.py
src/rice_yield/clean/: combine.py  process.py
src/rice_yield/models/: mlflow_utils.py  optuna_utils.py  shap_utils.py  train.py
src/rice_yield/utils/: clean_utils.py  dataframe_utils.py  notebook_utils.py  paths.py  plot_utils.py
tests/: test_paths.py
